@@ -103,6 +103,7 @@ class MagicWord {
 		'contentlanguage',
 		'pagesinnamespace',
 		'numberofadmins',
+		'numberofviews',
 		'defaultsort',
 		'pagesincategory',
 		'index',
@@ -146,6 +147,7 @@ class MagicWord {
 		'localtimestamp' => 3600,
 		'pagesinnamespace' => 3600,
 		'numberofadmins' => 3600,
+		'numberofviews' => 3600,
 		'numberingroup' => 3600,
 		);
 
