@@ -215,6 +215,9 @@ class CoreParserFunctions {
 	static function numberofedits( $parser, $raw = null ) {
 		return self::formatRaw( SiteStats::edits(), $raw );
 	}
+	static function numberofviews( $parser, $raw = null ) {
+		return self::formatRaw( SiteStats::views(), $raw );
+	}
 	static function pagesinnamespace( $parser, $namespace = 0, $raw = null ) {
 		return self::formatRaw( SiteStats::pagesInNs( intval( $namespace ) ), $raw );
 	}
